--- a/burndown/4.html
+++ b/burndown/4.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>Sprintgoal 4</title>
+  <title>4</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <style>
@@ -58,7 +58,7 @@
         <![endif]-->
 
   <!-- Add your site or application content here -->
-  <h1>Sprintgoal 4</h1>
+  <h1>4</h1>
   <canvas id="burndown" width="750" height="750"></canvas>
   <ul>
       <li class="total">Total points</li>
@@ -114,6 +114,17 @@ b.moveTo(g,p);b.lineTo(g,p-d*v(a.datasets[e].data[f],j,k)+c.barStrokeWidth/2);b.
   var ctx = document.getElementById("burndown").getContext("2d");
   var data = {
     labels: [
+            "04.03.2014",
+            "04.04.2014",
+            "04.05.2014",
+            "04.06.2014",
+            "04.07.2014",
+            "04.08.2014",
+            "04.09.2014",
+            "04.10.2014",
+            "04.11.2014",
+            "04.12.2014",
+            "04.13.2014",
             "04.14.2014",
             "04.15.2014",
             "04.16.2014",
@@ -136,21 +147,32 @@ b.moveTo(g,p);b.lineTo(g,p-d*v(a.datasets[e].data[f],j,k)+c.barStrokeWidth/2);b.
       pointColor:  "rgba(220,220,212,1)",
       pointStrokeColor: "#fff",
       data: [
-            25,
-            25,
-            25,
-            25,
-            25,
-            25,
-            25,
-            25,
-            25,
-            25,
-            25,
-            25,
-            28,
-            28,
-            28,
+            9,
+            9,
+            9,
+            9,
+            9,
+            9,
+            9,
+            9,
+            9,
+            9,
+            9,
+            26,
+            26,
+            26,
+            26,
+            26,
+            26,
+            26,
+            26,
+            26,
+            26,
+            26,
+            26,
+            29,
+            29,
+            29,
           ]
     }, {
       fillColor:   "rgba(233, 60, 79,0.5)",
@@ -158,6 +180,17 @@ b.moveTo(g,p);b.lineTo(g,p-d*v(a.datasets[e].data[f],j,k)+c.barStrokeWidth/2);b.
       pointColor:  "rgba(233, 60, 79,1)",
       pointStrokeColor: "#fff",
       data: [
+            9,
+            9,
+            9,
+            9,
+            9,
+            9,
+            9,
+            9,
+            9,
+            9,
+            9,
             21,
             21,
             21,
@@ -180,19 +213,30 @@ b.moveTo(g,p);b.lineTo(g,p-d*v(a.datasets[e].data[f],j,k)+c.barStrokeWidth/2);b.
       pointColor:  "rgba(233, 60, 79,0)",
       pointStrokeColor: "rgba(233, 60, 79,0)",
       data: [
-            23,
-            21,
-            20,
-            18,
-            16,
-            15,
+            8,
+            8,
+            7,
+            7,
+            7,
+            6,
+            6,
+            6,
+            5,
+            5,
+            5,
+            14,
             13,
+            12,
             11,
             10,
+            9,
             8,
-            6,
+            7,
+            5,
+            5,
             4,
             3,
+            2,
             1,
             0,
           ]
