--- a/burndown/5.html
+++ b/burndown/5.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>Sprintgoal 2</title>
+  <title>5</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <style>
@@ -58,7 +58,7 @@
         <![endif]-->
 
   <!-- Add your site or application content here -->
-  <h1>Sprintgoal 2</h1>
+  <h1>5</h1>
   <canvas id="burndown" width="750" height="750"></canvas>
   <ul>
       <li class="total">Total points</li>
@@ -114,28 +114,28 @@ b.moveTo(g,p);b.lineTo(g,p-d*v(a.datasets[e].data[f],j,k)+c.barStrokeWidth/2);b.
   var ctx = document.getElementById("burndown").getContext("2d");
   var data = {
     labels: [
-            "03.03.2014",
-            "03.04.2014",
-            "03.05.2014",
-            "03.06.2014",
-            "03.07.2014",
-            "03.08.2014",
-            "03.09.2014",
-            "03.10.2014",
-            "03.11.2014",
-            "03.12.2014",
-            "03.13.2014",
-            "03.14.2014",
-            "03.15.2014",
-            "03.16.2014",
-            "03.17.2014",
-            "03.18.2014",
-            "03.19.2014",
-            "03.20.2014",
-            "03.21.2014",
-            "03.22.2014",
-            "03.23.2014",
-            "03.24.2014",
+            "04.28.2014",
+            "04.29.2014",
+            "04.30.2014",
+            "05.01.2014",
+            "05.02.2014",
+            "05.03.2014",
+            "05.04.2014",
+            "05.05.2014",
+            "05.06.2014",
+            "05.07.2014",
+            "05.08.2014",
+            "05.09.2014",
+            "05.10.2014",
+            "05.11.2014",
+            "05.12.2014",
+            "05.13.2014",
+            "05.14.2014",
+            "05.15.2014",
+            "05.16.2014",
+            "05.17.2014",
+            "05.18.2014",
+            "05.19.2014",
                 ],
     datasets: [{
       fillColor:   "rgba(220,220,212,0.5)",
@@ -143,28 +143,28 @@ b.moveTo(g,p);b.lineTo(g,p-d*v(a.datasets[e].data[f],j,k)+c.barStrokeWidth/2);b.
       pointColor:  "rgba(220,220,212,1)",
       pointStrokeColor: "#fff",
       data: [
-            30,
-            30,
-            30,
-            30,
+            23,
+            25,
+            25,
+            29,
+            29,
             31,
             31,
             31,
             31,
             31,
-            31,
-            31,
-            31,
-            31,
-            31,
-            31,
-            31,
-            31,
-            31,
-            31,
-            31,
-            31,
-            31,
+            33,
+            34,
+            34,
+            34,
+            34,
+            34,
+            34,
+            34,
+            34,
+            34,
+            34,
+            34,
           ]
     }, {
       fillColor:   "rgba(233, 60, 79,0.5)",
@@ -172,27 +172,27 @@ b.moveTo(g,p);b.lineTo(g,p-d*v(a.datasets[e].data[f],j,k)+c.barStrokeWidth/2);b.
       pointColor:  "rgba(233, 60, 79,1)",
       pointStrokeColor: "#fff",
       data: [
-            26,
-            26,
-            26,
-            26,
             19,
-            19,
-            19,
-            18,
-            18,
-            18,
-            18,
-            18,
-            18,
-            18,
-            5,
-            5,
-            5,
-            5,
-            5,
-            5,
-            5,
+            21,
+            21,
+            11,
+            11,
+            13,
+            13,
+            13,
+            13,
+            13,
+            9,
+            9,
+            9,
+            4,
+            4,
+            4,
+            4,
+            4,
+            4,
+            4,
+            4,
             0,
           ]
     }, {
@@ -201,26 +201,26 @@ b.moveTo(g,p);b.lineTo(g,p-d*v(a.datasets[e].data[f],j,k)+c.barStrokeWidth/2);b.
       pointColor:  "rgba(233, 60, 79,0)",
       pointStrokeColor: "rgba(233, 60, 79,0)",
       data: [
-            28,
-            27,
-            25,
-            24,
+            21,
+            22,
+            21,
             23,
+            22,
             22,
             21,
             19,
             18,
             16,
+            16,
             15,
-            14,
+            13,
             12,
-            11,
+            10,
             9,
-            8,
             7,
-            5,
+            6,
             4,
-            2,
+            3,
             1,
             0,
           ]
